@@ -104,6 +104,21 @@
 #	define LCD_CONTROLLER_CUSTOM
 #	define LCD_ORIENTATION_RGB RGB_UP
 #	define DEFAULT_ORIENTATION ROT_LEFT
+#elif defined (DPFMODEL_coby_dp151_bw)
+#	define LCD_128x128
+#	define LCD_CONTROLLER_CUSTOM
+#	define LCD_ORIENTATION_RGB RGB_UP
+#	define DEFAULT_ORIENTATION ROT_LEFT
+#elif defined (DPFMODEL_dx27893_2)
+#	define LCD_128x128
+#	define LCD_CONTROLLER_CUSTOM
+#	define LCD_ORIENTATION_RGB RGB_UP
+#	define DEFAULT_ORIENTATION ROT_LEFT
+#elif defined (DPFMODEL_acme_1)
+#	define LCD_128x128
+#	define LCD_CONTROLLER_CUSTOM
+#	define LCD_ORIENTATION_RGB RGB_UP
+#	define DEFAULT_ORIENTATION ROT_LEFT
 // <<<< INSERT NEW DPFS BEFORE THIS LINE <<<<
 #else
 #error	"Unrecognized DPF TYPE specification"
